# App

./: .env.example  .gitignore  README.md  docker-compose.install.yml  docker-compose.yml  nginx.conf  setup.sh
.github/workflows/: release.yml
app/: nginx.conf
app/css/: app.css
app/js/: admin.js  app.js  billing.js  client.js  facturx.js  utils.js
controller/: Cargo.toml
controller/src/: index.html  main.rs  uninstall.rs
controller/src-tauri/: Cargo.toml  tauri.conf.json
controller/src-tauri/capabilities/: main.json
controller/src-tauri/src/: main.rs
mailer/: Dockerfile  package.json
pocketbase/migrations/: 001_init.js  002_billing.js  003_products.js  006_pa_settings.js  008_user_address.js  010_invoice_pa_status.js  012_pdf_b64_fix.js  013_verify_existing_users.js  015_client_siret.js  1781419619_updated_settings.js  1781420051_updated_settings.js  1781420706_updated_settings.js
setup/src/: index.html
setup/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
setup/src-tauri/capabilities/: main.json
setup/src-tauri/icons/: icon.icns
setup/src-tauri/src/: main.rs
setup/src/payload/: docker-compose.yml
setup/src/payload/app/: index.html  nginx.conf
setup/src/payload/hooks/: main.pb.js
setup/src/payload/mailer/: package-lock.json  package.json  server.js
setup/src/payload/migrations/: 004_otp.js  005_pdf_field.js  007_archive_status.js  009_user_firstname.js  (+8 more)
vitrine/: admin-demo.html  blog.html  decorateur.html  electricien.html  garage.html  index.html  intervio.html  jardin.html  mentions-legales.html  menuiserie.html  nginx.conf  plomberie.html  site.html
vitrine/css/: intervio.css  style.css
vitrine/js/: main.js
(+9 files in other folders)
