[package]
name = "intervys-controller"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "intervys"
path = "src/main.rs"

[[bin]]
name = "uninstall"
path = "src/uninstall.rs"

[dependencies]
tray-icon = "0.23"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
