[package]
name = "intervys-controller"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "intervys"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri       = { version = "2", features = ["tray-icon", "image-ico"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
