[package]
name = "intervys-setup"
version = "0.2.3"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }
zip = "2"

[dependencies]
tauri = { version = "2.0.4", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "4"
reqwest = { version = "0.12", features = ["blocking"] }
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
zip = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
